plasma: Fix text overflow in the calendar widget

BUG: 277433
BUG: 281676